fixed img heigth on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,7 @@ h1 {
     }
 
     img {
+        height: 100%;
         border-radius: 0.5rem 0 0 0.5rem; 
     }
 
